Update server URL for production

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
-REACT_APP_SERVER_URL=http://localhost:3001
+#vREACT_APP_SERVER_URL=http://localhost:3001
 REACT_APP_LOCATION_API_KEY=https://geo.ipify.org/api/v2/country?apiKey=at_3Rq91TeFjiyXblU7KvkEZCf4FQ2xz
+# Production server
+REACT_APP_SERVER_URL=https://balena-server.onrender.com
